--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     
 </head>
 <body>
-    <div class="menu-bar">
-    <ul>
+   <div class="menu-bar">
+   <ul>
         <li class="active"><a href="#">Home</a></li>
         <li><a href="#">Compare</a>
-        <div class="product">
-        <ul>
+      <div class="product">
+         <ul>
            <li><a href="#">Tata Ev's</a></li>
            <li><a href="#">Hyundai Ev's</a></li>
            <li><a href="#">MG Ev's</a></li>
-        </ul>
-        </div>
+         </ul>
+      </div>
      </li>
         <li><a href="#">About Us</a>
         <div class="product">
@@ -51,23 +51,32 @@
         <li><a href="#">Services</a>
         <div class="product">
         <ul>
-           <li class="services"><a href="#">Mechanical</a></li>
-           <div class="product-2">
-            <ul>
-           <li><a href="#">On site</a></li>
-           <li><a href="#">Serive Center</a></li>
-        </ul>
-           </div>
+           <li class="services"><a href="#">Road Assistance</a></li>
            <li><a href="#">Technical</a></li>
-           <li><a href="#">Road Assistance</a></li>
+           <li class="hover-me"><a href="#">Mechanical</a>
+           <div class="sub-menu-2">
+             <ul>
+               <li><a href="#">On Site</a></li>
+               <li><a href="#">Service Center</a></li>
+             </ul>
+           </div>
+           </li>
         </ul>
         </div>
         </li>
-        <li><a href="#">Conatct Us</a>
+        <li ><a href="#">Conatct Us</a>
         <div class="product">
         <ul>
-           <li><a href="#">Phone</a></li>
            <li><a href="#">Email</a></li>
+           <li class="hover-me"><a href="#">Phone</a>
+           <div class="sub-menu-2">
+             <ul>
+               <li><a href="#">Whtasapp</a></li>
+               <li><a href="#">Tel-phone</a></li>
+               <li><a href="#">Mobile</a></li>
+             </ul>
+           </div>
+           </li>
         </ul>
         </div>
        </li>
